--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,27 +9,12 @@
       "ES2021"
     ],
     "moduleResolution": "NodeNext",
-    "rootDir": ".",
     "outDir": "build",
     "allowSyntheticDefaultImports": true,
-    "importHelpers": true,
-    "alwaysStrict": true,
+    "strict": true,
     "sourceMap": true,
     "declaration": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitAny": false,
-    "noImplicitThis": false,
-    "strictNullChecks": false,
-    "baseUrl": ".",
-    "paths": {
-      "*": [
-        "node_modules/*"
-      ]
-    }
+    "noImplicitAny": true,
   },
   "include": ["src/**/*", "__tests__/**/*"]
 }
