--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "node-typescript-boilerplate",
   "version": "0.0.0",
   "description": "Minimalistic boilerplate to quick-start Node.js development in TypeScript.",
-  "type": "module",
   "engines": {
     "node": ">= 16.13 <17"
   },
@@ -35,7 +34,7 @@
   "author": "Jakub Synowiec <jsynowiec@users.noreply.github.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@tiptap/core": "^2.0.0-beta.182",
+    "prosemirror-view": "^1.29.0",
     "tslib": "~2.4"
   },
   "volta": {
